# grobot

./: .grobot.rosinstall  README.md
grobot_bringup/: CMakeLists.txt  package.xml
grobot_bringup/env-hooks/: model.bash
grobot_bringup/launch/: bringup.launch  mapping.launch  navigation.launch  patrols.launch  visual_servoing.launch  world.launch
grobot_bringup/launch/includes/: amcl.xml  move_base.xml  patrol_robot.xml
grobot_bringup/rviz/: bringup.rviz  mapping.rviz  navigation.rviz  patrols.rviz  visual_servoing.rviz
grobot_gazebo/: CMakeLists.txt  package.xml
grobot_gazebo/models/aruco_marker/: model.config  model.sdf
grobot_gazebo/models/aruco_marker/materials/scripts/: marker.material
grobot_gazebo/models/box_z=0.5m/: model.config  model.sdf
grobot_gazebo/models/building/: model.config  model.sdf
grobot_gazebo/worlds/: example.world
grobot_maps/: CMakeLists.txt  package.xml
grobot_maps/maps/: example_world.pgm  example_world.yaml
grobot_navigation/: CMakeLists.txt  package.xml
grobot_navigation/include/grobot_navigation/: marker_follower.h
grobot_navigation/include/grobot_navigation/exploration/: exploration_base.h  exploration_factory.h  move_to_target_exploration.h  rotate_exploration.h  types.h
grobot_navigation/src/: follow_marker_node.cpp  marker_follower.cpp
grobot_utilities/: CMakeLists.txt  package.xml
grobot_utilities/action/: Patrol.action
grobot_utilities/include/grobot_utilities/: initial_pose_setter.h
grobot_utilities/scripts/: patrol_client  patrol_server  spawn_marker_on_robot
grobot_utilities/src/: set_initial_pose_node.cpp
