<?xml version="1.0"?>
<package format="2">
  <name>grobot_gazebo</name>
  <version>0.0.0</version>
  <description>The grobot_gazebo package</description>

  <author email="nlamprian@gmail.com">Nick Lamprianidis</author>
  <maintainer email="nlamprian@gmail.com">Nick Lamprianidis</maintainer>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_export_depend>gazebo_ros</build_export_depend>
  <exec_depend>gazebo_ros</exec_depend>

  <export>
    <gazebo_ros gazebo_media_path="${prefix}" />
    <gazebo_ros gazebo_model_path="${prefix}/models" />
  </export>
</package>
