<?xml version="1.0"?>
<package format="2">
  <name>grobot_navigation</name>
  <version>0.0.0</version>
  <description>The grobot_navigation package</description>

  <author email="nlamprian@gmail.com">Nick Lamprianidis</author>
  <maintainer email="nlamprian@gmail.com">Nick Lamprianidis</maintainer>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>fiducial_msgs</build_depend>
  <build_depend>move_base_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>tf</build_depend>
  <exec_depend>fiducial_msgs</exec_depend>
  <exec_depend>move_base_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>actionlib</exec_depend>
  <exec_depend>tf</exec_depend>

  <export>
  </export>
</package>
